Fix for wonky spacing around text beneath widened images.
Bug: T101186

--- a/www/less/widenImages.less
+++ b/www/less/widenImages.less
@@ -36,3 +36,15 @@
     text-align: center;
 }
 
+/* Add a little breathing room beneath thumb captions - see enwiki "Vincent van Gogh > Paris (1886-1888)" */
+.thumbcaption {
+    margin-bottom:1.5em !important;
+}
+
+/* Wrangle extra margin - see enwiki "Claude Monet > Impressionism" */
+li.gallerybox div.thumb > div {
+    margin:0px !important;
+}
+div.gallerytext > p {
+    margin-top:0px !important;
+}
